// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template custom template should be able to call defaultTemplate 1`] = `
"<!doctype html>
    <html >
      <head>
        <meta charset=\\"utf-8\\">
        <meta name=\\"generator\\" content=\\"Frontity\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
        <meta rel=\\"custom\\" />
      </head>
      <body >
        <div id=\\"root\\">undefined</div>
        
      </body>
    </html>"
`;

exports[`template custom template should define a custom template 1`] = `
"(args) => {
            return store.libraries.frontity.template(Object.assign(Object.assign({}, args), { defaultTemplate }));
        }"
`;

exports[`template should define a default template 1`] = `
"({ html, scripts, head, htmlAttributes, bodyAttributes, }) => \`<!doctype html>
    <html \${htmlAttributes || \\"\\"}>
      <head>
        <meta charset=\\"utf-8\\">
        <meta name=\\"generator\\" content=\\"Frontity\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
        \${head ? head.join(\\"\\\\n\\") : \\"\\"}
      </head>
      <body \${bodyAttributes || \\"\\"}>
        <div id=\\"root\\">\${html}</div>
        \${scripts ? scripts.join(\\"\\\\n\\") : \\"\\"}
      </body>
    </html>\`"
`;

exports[`template the default template should accept head, scripts and attributes 1`] = `
"<!doctype html>
    <html lang=\\"en\\">
      <head>
        <meta charset=\\"utf-8\\">
        <meta name=\\"generator\\" content=\\"Frontity\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
        <custom-tag attribute=\\"value\\" />
      </head>
      <body class=\\"custom\\">
        <div id=\\"root\\">undefined</div>
        <script src=\\"/path/to/script\\"></script>
      </body>
    </html>"
`;
